RESOLVED FIXED 61194
Chromium DevTools: Tab crashes with "Aw, snap!" on entering "(new Image())." in console
https://bugs.webkit.org/show_bug.cgi?id=61194
Summary Chromium DevTools: Tab crashes with "Aw, snap!" on entering "(new Image())." ...
Vsevolod Vlasov
Reported 2011-05-20 09:14:50 PDT
Tab crashes with "Aw, snap!" on entering "(new Image())." in console. Introduced in https://bugs.webkit.org/show_bug.cgi?id=60800
Attachments
Patch (4.36 KB, patch)
2011-05-23 02:17 PDT, Yury Semikhatsky
abarth: review+
Yury Semikhatsky
Comment 1 2011-05-23 02:17:06 PDT
Yury Semikhatsky
Comment 2 2011-05-23 02:47:08 PDT
*** Bug 61237 has been marked as a duplicate of this bug. ***
Yury Semikhatsky
Comment 3 2011-05-24 05:40:14 PDT
Adam Klein
Comment 4 2011-05-24 11:12:48 PDT
Reverted r87145 for reason: Regression Committed r87172: <http://trac.webkit.org/changeset/87172>
Adam Klein
Comment 5 2011-05-24 11:14:06 PDT
(In reply to comment #4) > Reverted r87145 for reason: > > Regression > > Committed r87172: <http://trac.webkit.org/changeset/87172> Full rollout message: Regression in LayoutTests/inspector/debugger/scripts-panel.html on Chromium Win & Linux. See http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=inspector%2Fdebugger%2Fscripts-panel.html&group=%40ToT%20-%20chromium.org
Adam Klein
Comment 6 2011-05-24 11:27:26 PDT
Looking further at the dashboard, it looks like it's flakiness, not always-failure. But this test seems to have been rock solid right up until this patch, so I still highly suspect it's related.
Yury Semikhatsky
Comment 7 2011-05-25 00:44:33 PDT
(In reply to comment #6) > Looking further at the dashboard, it looks like it's flakiness, not always-failure. But this test seems to have been rock solid right up until this patch, so I still highly suspect it's related. I cannot reproduce the failure locally. I'm going to reapply the patch since the problem seems to be in the test itself. Let's see if the flakiness will appear again and try to fix the test.
Yury Semikhatsky
Comment 8 2011-05-25 00:45:56 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/inspector/console/console-eval-syntax-error-expected.txt A LayoutTests/inspector/console/console-eval-syntax-error.html A LayoutTests/platform/chromium/inspector/console/console-eval-syntax-error-expected.txt M Source/WebCore/ChangeLog M Source/WebCore/bindings/v8/custom/V8InjectedScriptHostCustom.cpp Committed r87278
Yury Semikhatsky
Comment 9 2011-05-26 09:00:21 PDT
*** Bug 61471 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.