2011-05-24  Adam Klein  <adamk@chromium.org>

Unreviewed, rolling out r87145.
        http://trac.webkit.org/changeset/87145
        https://bugs.webkit.org/show_bug.cgi?id=61194

        Regression in LayoutTests/inspector/debugger/scripts-panel.html on Chromium Win & Linux.

        * inspector/console/console-eval-syntax-error-expected.txt: Removed.
        * inspector/console/console-eval-syntax-error.html: Removed.
        * platform/chromium/inspector/console/console-eval-syntax-error-expected.txt: Removed.
2011-05-24  Adam Klein  <adamk@chromium.org>

        Unreviewed, rolling out r87145.
        http://trac.webkit.org/changeset/87145
        https://bugs.webkit.org/show_bug.cgi?id=61194

        Regression in LayoutTests/inspector/debugger/scripts-panel.html on Chromium Win & Linux.

        * bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
        (WebCore::V8InjectedScriptHost::evaluateCallback):

Canonical link: https://commits.webkit.org/76752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87172 268f45cc-cd09-0410-ab3c-d52691b4dbfc